2007-11-06 18:23 +0100  Rocco Rutte  <pdmef@gmx.net>  (1770ab532bfd)

	* curs_lib.c, imap/imap.c, imap/message.c, mbox.c, mh.c,
	mutt_curses.h, pattern.c, pop.c, pop_lib.c, smtp.c: Add
	percentages to progress bar optionally supplied by caller. This is
	necessary to let the mbox driver print useful percentages. If
	there's no percentage given and we have a size, calculate on it on
	our own.  Closes #2929.

2007-11-06 17:22 +0100  Rocco Rutte  <pdmef@gmx.net>  (eae335942190)

	* mh.c: (Re-)Add total msg count to progress for parsing maildirs

2007-11-05 14:24 -0800  Vincent Lefevre  <vincent@vinc17.org>  (ecb694b6176b)

	* po/fr.po: Updated French translation

2007-11-05 17:47 +0100  Rocco Rutte  <pdmef@gmx.net>  (6b9e91edba54)

	* curs_lib.c: Save value of errno across mutt_endwin()
	calls. Mutt_endwin() is sometimes called after noticing an error
	but before printing the message via perror(). Closes #2965.

2007-11-05 15:53 +0100  Emanuele Giaquinta  <e.giaquinta@glauco.it>  (b8dc6926ddf4)

	* doc/manual.xml.head: Manual: Fix typo

2007-11-05 14:53 +0100  Rocco Rutte  <pdmef@gmx.net>  (ad7983699656)

	* doc/manual.xml.head: Manual: Improve [un]mailboxes
	documentation. Closes #2204.

2007-11-05 12:11 +0100  Ralf Wildenhues  <wildenhues@ins.uni-bonn.de>  (645fcdd66828)

	* configure.ac, intl/Makefile.in, po/Makefile.in.in: Optionally define
	$datarootdir on our own for autoconf <2.60 compatibility. While I'm
	at it, fix two warnings in other files about ignoring datarootdir
	with autoconf >2.60. Closes #2905.

2007-11-04 13:19 -0800  Vsevolod Volkov  <vvv@mutt.org.ua>  (dc5ec6dbb278)

	* po/ru.po: Updated Russian translation

2007-11-04 13:17 -0800  Ivan Vilata i Balaguer  <ivan@selidor.net>  (1f72281eb36c)

	* po/ca.po: Updated Catalan translation

2007-11-04 13:16 -0800  Roland Rosenfeld  <roland@spinnaker.de>  (b2f0d89881dd)

	* po/de.po: Updated German translation

2007-11-04 19:10 +0100  Rocco Rutte  <pdmef@gmx.net>  (02e8b9c7bdc6)
